[tool.poetry]
name = "lastfm-archiver"
version = "0.1.0"
description = ""
authors = ["Damola <dshomoye@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
colorama = "^0.4.4"
requests = "^2.25.1"

[tool.poetry.scripts]
lastfm-archiver = "lastfm_archiver.main:app"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
